<resources>
    <string name="app_name">Chatify</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_heading">Sign in to your account</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">"Don't have an account?"</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="register_heading">Register Account</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>