<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:gravity="center"
    android:background="#F4F1F3"
    tools:context=".LoginActivity">
    <TextView
        android:id="@+id/login_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_heading"
        android:textSize="25sp"
        android:textColor="@color/themeColor"
        android:textStyle="bold"
        android:layout_marginBottom="80dp"
        />
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />
    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:drawablePadding="0dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_margin="20dp"

        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"
      />
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />
    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="end"
        android:layout_marginEnd="25dp"
        android:textAllCaps="false"
        android:letterSpacing="0.05"
        android:textSize="15sp"
        android:layout_marginTop="-22dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        app:cornerRadius="5dp"
        android:textSize="18sp"
        android:letterSpacing="0.05"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/signup_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"/>
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>

</LinearLayout>