<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F4F1F3"
    tools:context=".SignUpActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:shape="oval"
        android:src="@drawable/ic_account_circle_24"
        android:contentDescription="@string/profile_picture"
        />
    <ImageButton
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"

        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/add_circle"
        android:layout_marginTop="-33dp"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/profile_icon" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />


    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />


    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />
    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:layout_marginBottom="-15dp"
        />
    <EditText
        android:id="@+id/username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:inputType="text"
        android:autofillHints="password"
        android:background="@color/white"
        android:padding="15dp"
        android:textSize="17sp"
        android:layout_margin="20dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        app:cornerRadius="5dp"
        android:textSize="18sp"
        android:letterSpacing="0.05"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/signup_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            />
        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>
</LinearLayout>